@@ -139,6 +139,16 @@ llvm-toolchain-12 (1:12.0.1-7) UNRELEASED; urgency=medium
 
   [  Gianfranco Costamagna ]
   * Add a patch to fix omp build on riscv64
+  * cmake: use ON instead of YES for consistency
+  * Add LIBCXXABI_ENABLE_STATIC_UNWINDER=ON
+    LIBCXXABI_STATICALLY_LINK_UNWINDER_IN_SHARED_LIBRARY=OFF
+    LIBCXXABI_STATICALLY_LINK_UNWINDER_IN_STATIC_LIBRARY=ON
+    to libc++ when libunwind is built
+    Matches what is done on brew:
+    https://bit.ly/3kDNpC9
+
+  [  Gianfranco Costamagna ]
+  * Add a patch to fix omp build on riscv64
 
  -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 29 Aug 2021 15:15:18 +0200
 
